--- a/itPocket/WebContent/static/css/join.css
+++ b/itPocket/WebContent/static/css/join.css
@@ -64,7 +64,7 @@ body {
     letter-spacing: normal;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1{
     margin-top: 0;
 }
 
@@ -182,7 +182,7 @@ input {
     width: 3.125rem;
     z-index: 10;
     text-align: right;
-    color: #00c7ae;
+    color: #655DBB!important;
     font-weight: 400;
 }
 
@@ -259,3 +259,23 @@ input[type=checkbox], input[type=radio] {
     transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.terms-container[data-v-17616218] {
+    height: 100%;
+    min-height: 9rem;
+    margin-top: 0.9375rem;
+    padding-top: 1rem;
+    border-top: 0.0625rem solid #f2f2f2;
+}
+
+.signup-form button.btn.btn-signup[data-v-2ef2701c] {
+    margin-top: 0.75rem;
+}
+.signup-form button.btn[data-v-2ef2701c] {
+    width: 100%!important;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #655DBB!important;
+    border-color: #655DBB!important;
+}
